Shopping Cart using OWL

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+  	<style>
+	body {
+		background-color: grey;
+	}
+</style>
     <meta charset="UTF-8" />
-    <title>OWL Todo App</title>
+    <title>Shopping App</title>
     <link rel="stylesheet" href="app.css" />
     <script src="owl.js"></script>
     <script src="app.js"></script>
